--- a/swap2/index.html
+++ b/swap2/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width, initial-scale=1.0"><title>swap</title><script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script><script src="https://mis320.github.io/xiamicommunity/web3.min.js"></script><script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script><script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script><script src="https://mis320.github.io/transfer/swap2/buyandsell.js"></script><script src="https://mis320.github.io/transfer/swap2/nodes.js"></script></head><body><span>私钥</span><br><div id=""><textarea name=""id="key"cols="80"rows="4"></textarea></div><span>花费多少BNB</span><br><div id=""><textarea name=""id="fee"cols="80"rows="2">0.05</textarea></div><span>合约地址</span><br><div id=""><textarea name=""id="contract"cols="80"rows="2"></textarea></div><span>循环间隔(>=100)</span><br><div id=""><textarea name=""id="time"cols="80"rows="2">200</textarea></div><div><span>大于多少BNB执行购买(预计池子BNB大小)</span><br><div id=""><textarea name=""id="poolminETH"cols="80"rows="2">5</textarea></div><span>or大于多少USDT执行购买(预计池子BUSDT/USDT/大小)</span><br><div id=""><textarea name=""id="poolminUSDT"cols="80"rows="2">3000</textarea></div><span>gasPrice(默认)</span><br><div id=""><textarea name=""id="gasprice"cols="80"rows="2">7.2</textarea></div><span>sellRatio(模拟卖出比例<=99(整数)防高燃烧)</span><div id=""><textarea name=""id="sellRatio"cols="80"rows="2">70</textarea></div><span>是否检测貔貅(1 是 0 否)(如果有时间锁确定不是貔貅填 0 防止买不进)</span><div id=""><textarea name=""id="isPX"cols="80"rows="2">1</textarea></div></div><div class="prop"id="prop">.......</div><br><form><select name="type"id="swapId"><option>pancakeSwap(薄饼)</option><option>bakerySwap(面包)</option><option>babySwap(北鼻)</option><option>apeswap(猩猩)</option></select></form><span>调用结果</span><br><div id=""><textarea name=""id="res"cols="80"rows="7">请链接钱包。。。。。。。。。</textarea></div><!--<button id="test1"onclick="test1()"type="button">测试</button></button><br>--><button id="allbuy"onclick="allbuy()"type="button">轮询买入</button></button><button onclick="cx()">检查合约状态</button><button id="test"onclick="test()">买入</button><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!--<button onclick="cxtl()">查询套利</button></button>--><br><button id="approve"onclick="approve()">授权swap</button></button><br><br><button id="sell"onclick="allsell(2)">轮询翻倍卖出一半</button></button></button><button id="sell2f"onclick="sell2(2)">卖出一半</button></button><button id="sell1f"onclick="sell2(1)">全部卖出</button></button><br><br><br><br><br></body><Script>function agree(){console.log();}
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width, initial-scale=1.0"><title>swap</title><script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script><!--<script src="https://mis320.github.io/xiamicommunity/web3.min.js"></script>--><script src="https://mis320.github.io/xiamicommunity/web3ex1.js"></script><!--<script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script>--><script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script><script src="https://mis320.github.io/transfer/swap2/buyandsell.js"></script><script src="https://mis320.github.io/transfer/swap2/nodes2.js"></script></head><body><span>私钥</span><br><div id=""><textarea name=""id="key"cols="80"rows="4"></textarea></div><span>花费多少BNB</span><br><div id=""><textarea name=""id="fee"cols="80"rows="2">0.05</textarea></div><span>合约地址</span><br><div id=""><textarea name=""id="contract"cols="80"rows="2"></textarea></div><span>循环间隔(>=100)</span><br><div id=""><textarea name=""id="time"cols="80"rows="2">200</textarea></div><div><span>大于多少BNB执行购买(预计池子BNB大小)</span><br><div id=""><textarea name=""id="poolminETH"cols="80"rows="2">5</textarea></div><span>or大于多少USDT执行购买(预计池子BUSDT/USDT/大小)</span><br><div id=""><textarea name=""id="poolminUSDT"cols="80"rows="2">3000</textarea></div><span>gasPrice(默认)</span><br><div id=""><textarea name=""id="gasprice"cols="80"rows="2">7.2</textarea></div><span>sellRatio(模拟卖出比例<=99(整数)防高燃烧)</span><div id=""><textarea name=""id="sellRatio"cols="80"rows="2">70</textarea></div><span>是否检测貔貅(1 是 0 否)(如果有时间锁确定不是貔貅填 0 防止买不进)</span><div id=""><textarea name=""id="isPX"cols="80"rows="2">1</textarea></div></div><div class="prop1"id="prop1">.......</div><br><div class="prop"id="prop">.......</div><br><form><select name="type"id="swapId"><option>pancakeSwap(薄饼)</option><option>bakerySwap(面包)</option><option>babySwap(北鼻)</option><option>apeswap(猩猩)</option></select></form><span>调用结果</span><br><div id=""><textarea name=""id="res"cols="80"rows="7">请链接钱包。。。。。。。。。</textarea></div><!--<button id="test1"onclick="test1()"type="button">测试</button></button><br>--><button id="allbuy"onclick="allbuy()"type="button">轮询买入</button></button><button onclick="cx()">检查合约状态</button><button id="test"onclick="test()">买入</button><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!--<button onclick="cxtl()">查询套利</button></button>--><br><button id="approve"onclick="approve()">授权swap</button></button><br><br><button id="sell"onclick="allsell(2)">轮询翻倍卖出一半</button></button></button><button id="sell2f"onclick="sell2(2)">卖出一半</button></button><button id="sell1f"onclick="sell2(1)">全部卖出</button></button><br><br><br><br><br></body><Script>function agree(){console.log();}
 let factoryContract
 let routerContract
 let WHT
 var LastAccount='';var gasp;var swapbbContract;var web3Provider;let web3x
 let falg=false
 let intervalID
-var rd=document.getElementById("res");async function test1(){console.log(index);console.log(swapInfo);let index=swapID.selectedIndex;console.log(swapInfo[parseInt(index+1)]);}
-function init(){let v1=document.getElementById("fee");if(get('qbgjfee')!=null){v1.value=get('qbgjfee');}
+var rd=document.getElementById("res");function init(){let v1=document.getElementById("fee");if(get('qbgjfee')!=null){v1.value=get('qbgjfee');}
 let v2=document.getElementById("contract");if(get('qbgjcontract')!=null){}
 let v3=document.getElementById("poolminETH");if(get('poolminETH')!=null){v3.value=get('poolminETH');}
 if(get('qbgjbuyMINPOOLUSDT')!=null){$set('poolminUSDT',get('qbgjbuyMINPOOLUSDT'))}}
@@ -14,37 +13,40 @@ async function getWeb3(){clearInterval(intervalID)
 let web3x=({web3:null,gasPrice:null,})
 let web3Provider;if(window.ethereum){web3Provider=window.ethereum;try{window.ethereum.enable();}catch(error){window.ethereum.enable();web3Provider=window.web3.currentProvider;}}else{window.ethereum.enable();web3Provider=window.web3.currentProvider;}
 web3x.web3=new Web3(web3Provider);web3x.gasPrice='7200000000';console.log(web3x.gasPrice);$set('gasprice',web3x.web3.utils.fromWei(web3x.gasPrice,'gwei'))
-let network=web3x.web3.currentProvider.networkVersion
+web3x.web3.utils.unitMap=unitMap
 console.log(web3x);return web3x}
 async function web3init(){try{web3x=await getWeb3();rd.value="初始化完成,轮询类型需要选择swap"}catch(error){setTimeout(()=>{web3init()},500);}
 try{setInterval(async()=>{getSellBNB()},3000);}catch(error){console.log(error);}}</Script><script></script><script>let G_index='1'
 const CX_index=['1','2','3','4']
 const CHAIN_ID='56'
 const swapID=document.getElementById("swapId");function name(params){}
+async function test1(){let myaddress=(await web3x.web3.eth.getAccounts())[0]
+let contract=$get('contract')
+let paths=getPaths(contract).sell;let pathsBuy=getPaths(contract).buy;console.log("myaddress",myaddress);console.log("contract",contract);let fee=$get("fee");let sendHt=web3x.web3.utils.toWei(fee,'ether')
+let InfoSell=await getInfoRouter(getSellBNB_k).getInfo('0',paths,CX_index,contract).call({from:myaddress});console.log(InfoSell);}
 let getSellBNB_k=0
 async function getSellBNB(){getSellBNB_k++
 if($get('contract').length>15){let myaddress=(await web3x.web3.eth.getAccounts())[0]
 let contract=$get('contract')
-let paths=getPaths(contract).sell;let token=getRouterMethods(ERC20ABI,contract)
-let symbol=await token.symbol().call()
-let balanceOf=await token.balanceOf(myaddress).call()
-let decimals=await token.decimals().call()
-let Info=await web3NodeSwap(G_start).getPathAmountS(balanceOf,paths,CX_index).call()
-document.getElementById('prop').innerHTML=symbol+" : "+weiformeth(balanceOf,decimals+"")+"||"+"估计卖出BNB："+web3x.web3.utils.fromWei(Info.amounts,"ether")}}
+let paths=getPaths(contract).sell;let pathsBuy=getPaths(contract).buy;let fee=$get("fee");let sendHt=web3x.web3.utils.toWei(fee,'ether')
+let InfoBuy=await getInfoRouter(getSellBNB_k).getInfo(sendHt,pathsBuy,CX_index,contract).call({from:myaddress});let InfoSell=await getInfoRouter(getSellBNB_k).getInfo('0',paths,CX_index,contract).call({from:myaddress});document.getElementById('prop1').innerHTML='BNB: '+fee+"||"+"估计可以买入"+InfoBuy.symbol+"："+weiformeth(InfoBuy.amounts,InfoBuy.decimals)
+document.getElementById('prop').innerHTML=InfoSell.symbol+" : "+weiformeth(InfoSell.balanceOf,InfoSell.decimals)+"||"+"估计卖出BNB："+web3x.web3.utils.fromWei(InfoSell.amounts,"ether")}}
 function getRouterMethods(p1,p2){let web3=newWeb3(nodeUrls[G_start%14]);if(p2==undefined){return new web3.eth.Contract(p1.abi,p1.address).methods;}else{return new web3.eth.Contract(p1,p2).methods;}}
 let G_start=0;async function cx(){G_start++
 let isPX=$get("isPX");if(isPX>0){isPX=true}else{isPX=false}
-let fee=$get("fee");let G_sellRatio=$get("sellRatio")
-let sendHt=web3x.web3.utils.toWei(fee,'ether')
+let fee=$get("fee");let sendHt=web3x.web3.utils.toWei(fee,'ether')
+let G_sellRatio=$get("sellRatio")
 let contract=$get("contract");contract=contract.replace(new RegExp(' ','g'),'')
 let paths=getPaths(contract).buy;console.log(JSON.stringify(paths));console.log(JSON.stringify(getPaths(contract).sell));const swap=getRouterMethods(G_ABI,gan_si_gou_zhuang_TOKEN)
 let Info=await swap.getPathAmountS(web3x.web3.utils.toWei($get("fee"),'ether'),paths,CX_index).call()
-console.log(Info);let pair=await swap.getPair(contract,Info.index).call()
+console.log(Info);if(Info.amounts=='0'){Info.index='1'}
+let pair=await swap.getPair(contract,Info.index).call()
 let little='1'
 try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,Info.index,little,true,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
-console.log('合约目前正常！！');rd.value='合约目前正常！！'}catch(error){try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,res.index,little,false,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
-console.log('貔貅有解！！');rd.value='貔貅有解！！'}catch(error){console.log(error);if(new String(error).indexOf('minPool')!=-1){console.log('未知||流动性不足？')
-rd.value='未知||流动性不足？'}else if(new String(error).indexOf('insufficient funds')!=-1){console.log('当前账号无法检查该合约！');rd.value='当前账号无法检查该合约！'}else{console.log('貔貅无解！,等狗庄开交易');rd.value='貔貅无解！，等狗庄开交易或者有时间锁'}}}
+console.log('合约目前正常！！');rd.value='合约目前正常！！'}catch(error){try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,Info.index,little,false,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
+console.log('貔貅有解！！');rd.value='貔貅有解！！'}catch(error){console.log(error);let strE=new String(error)
+if(strE.indexOf('minPool')!=-1||strE.indexOf('minPool')){console.log('未知||流动性不足？')
+rd.value='未知||流动性不足？'}else if(new String(error).indexOf('insufficient funds')!=-1){console.log('当前账号无法检查该合约！gas不足');rd.value='当前账号无法检查该合约！gas不足'}else{console.log('貔貅无解！或高燃烧,等狗庄开交易');rd.value='貔貅无解！或高燃烧，等狗庄开交易或者有时间锁'}}}
 console.log(pair);let wtoken=getRouterMethods(ERC20ABI,weth)
 let utoken=getRouterMethods(ERC20ABI,usdt)
 let btoken=getRouterMethods(ERC20ABI,busdt)
@@ -212,8 +214,8 @@ function allDisabled(){document.getElementById('allbuy').disabled='disabled';doc
 function allEnabled(){document.getElementById('approve').disabled=false;document.getElementById('test').disabled=false;document.getElementById('allbuy').disabled=false;document.getElementById('sell').disabled=false;document.getElementById('sell2f').disabled=false;document.getElementById('sell1f').disabled=false;}</script><script>function getMethods(p1,p2){if(p2==undefined){return new web3x.web3.eth.Contract(p1.abi,p1.address).methods;}else{return new web3x.web3.eth.Contract(p1,p2).methods;}}
 function $set(p1,p2){let t=document.getElementById(p1);t.value=p2}
 function $get(p1){let t=document.getElementById(p1);return t.value}
-function weiformeth(num,decimals){return ethers.utils.bigNumberify(num+'').div((pow(decimals)))}
-function ethforwei(num,decimals){return ethers.utils.bigNumberify(num+'').mul((pow(decimals)))}
+function weiformeth(num,decimals){return web3x.web3.utils.fromWei(num,decimals+"")}
+function ethforwei(num,decimals){return web3x.web3.utils.toWei(num,decimals+"")}
 function pow(c){let p='1'
 for(let index=0;index<c;index++){p+='0'}
 return p}
